--- a/recipes/templates/recipes/pages/home.html
+++ b/recipes/templates/recipes/pages/home.html
@@ -9,6 +9,9 @@
             {% include 'recipes/partials/recipe.html' %}
             {% include 'recipes/partials/recipe.html' %}
             {% include 'recipes/partials/recipe.html' %}
+            {% include 'recipes/partials/recipe.html' %}
+            {% include 'recipes/partials/recipe.html' %}
+            {% include 'recipes/partials/recipe.html' %}
         </div>
     </main>
 
